update coupling fig

--- a/pyReef/agutmpl2015.tex
+++ b/pyReef/agutmpl2015.tex
@@ -214,19 +214,19 @@ School of Geosciences, University of Sydney, Madsen Building, Sydney, NSW 2006, 
 
 \section{Introduction}
 
-Over more than two decades, forward modelling of carbonate platform evolution have been successfully able to replicate many aspects of reef stratigraphic architectures \citep{Bosence90, Parcell03, Hasler08, Barrett12, Seard13, Huang15, Kolodka16}. These studies are used to understand and make predictions of subsurface stratal geometries and facies but also to quantify the influences of both allocyclic and autocyclic processes on carbonate systems (\citet{Williams11} or \citet{Burgess13} to cite the most recent ones). Due to the broad range of spatial and temporal scales as well as the complex physical and biological feedbacks involved in the formation of coral reefs, stratigraphic carbonate numerical models have understandably relied on several assumptions in regards to carbonate production, oceanic forcing and coral communities interactions. Their mathematical representation of stratal construction and sedimentary processes can be divided in three main families.
+Over more than two decades, forward modelling of carbonate platform evolution have been successfully able to replicate many aspects of reef stratigraphic architectures \citep{Bosence90, Parcell03, Hasler08, Barrett12, Seard13, Huang15, Kolodka16}. These studies are used to understand and make predictions of subsurface stratal geometries and facies but also to quantify the influences of both allocyclic and autocyclic processes on carbonate systems (\citet{Williams11} or \citet{Burgess13} to cite the most recent ones). Due to the broad range of spatial and temporal scales as well as the complex physical and biological feedbacks involved in the formation of coral reefs, stratigraphic carbonate numerical models have understandably relied on several assumptions in regards to carbonate production, oceanic forcings and coral communities interactions. Their mathematical representation of stratal construction and sedimentary processes can be divided in three main families.
 
 \noindent The convential approach simulates 3D development of either pure carbonate or mixed carbonate-silicilastic stratigraphies by modelling the main sedimentary processes using deterministic algorithms with time step of several hundreds to thousands of years. In this type of approach, the mathematical strategies often rely on diffusion laws, carbonate in-situ and sediment production rates associated to different carbonate factories as defined by \citet{James92} and use a mix of physical and empirical-based modelling methods. Complexity of the mathematical techniques used in these models usually depends on the problem to address \citep{Granjeon99, Warrlich02, Toomey16}. The most used models in this space are \textit{Dionisos} \citep{Granjeon99} and \textit{Carbonate3D} \citep{Warrlich02}. Two notable other examples are \textit{Simsafadim} \citep{Bitzer01} which incorporates \textit{predator-prey} algorithm to simulate the effect of biological activity and \textit{GPM} \citep{Tetzlaff05, Hill06} which address the problem of supersaturation on carbonate platform depositional geometries.
 
-\noindent The second family of mathematical models proposes to mitigate the lack of observational data and highly nonlinear relationships between the different components of a reef system by using a fuzzy logic approach \citep{Meesters98}. Fuzzy-based numerical models have proven to be a good alternative to conventional approach which often suffers from a lack of quantitative knowledge about the system being modeled, and therefore limits the effective use of available dataset \citep{Parcell98}. In addition to purely fuzzy-based stratigraphic forward modelling approaches (\textit{e.g.} \textit{FuzzyReef} from \citet{Parcell03} or \textit{Fuzzim} from \citet{Nordlund99}), other models have combined conventional hydrodynamics flow model and associated sediment transport with fuzzy logic and fuzzy-set theory to predict facies distribution in carbonate environments (an example being \textit{Sedsim} \citep{Griffiths01, Salles11}).
+\noindent The second family of mathematical models proposes to mitigate the lack of observational data and highly nonlinear relationships between the different components of a reef system by using a fuzzy logic approach \citep{Meesters98}. Fuzzy-based numerical models have proven to be a good alternative to conventional approach which often suffers from a lack of quantitative knowledge about the system being modeled, and therefore limits the effective use of available dataset \citep{Parcell98}. In addition to purely fuzzy-based stratigraphic forward modelling approaches (such as \textit{FuzzyReef} from \citet{Parcell03} or \textit{Fuzzim} from \citet{Nordlund99}), other models have combined conventional hydrodynamics flow approaches and associated sediment transport with fuzzy logic and fuzzy-set theory to predict facies distribution in carbonate environments (an example being \textit{Sedsim} \citep{Griffiths01, Salles11}).
 
-\noindent The last family of deterministic numerical models are based on cellular automata approach. This technique has received some recent interests from the carbonate platform modelling community as it provides a simple and elegant method to investigate carbonate facies distribution. Using \textit{Carbocat}, \citet{Burgess13} was able to simulate the nature and origins of heterogeneous platform interior strata.
+\noindent The last family of deterministic numerical models are based on cellular automata. They represent simple mathematical formulations of natural systems. Each automaton evolves in discrete time steps according to rules that specify the value of each site in terms of the states of neighbouring sites \citep{Wolfram84}. This technique has received some recent interests from the reef system modelling community as it provides an elegant method to investigate carbonate facies distribution and can generate complex histories of reef platform lateral migration behavior. As an example, using \textit{Carbocat}, \citet{Burgess13} was able to simulate the nature and origins of heterogeneous platform interior strata. However, the method seems to produce highly variable results for small differences in initial conditions and additional studies will need to be conducted to fully assess the capability of such approach for carbonate stratigraphic modelling \citep{Burgess13}.
 
-\noindent In this paper, we propose a parallel 3D numerical model based on a hybrid approach which combines conventional techniques to compute wave transformation, ocean circulation and calcareous sand transport with a fuzzy logic method to simulate carbonate production and disintegration. To our knowledge, previous carbonate stratigraphic forward models are all lacking the details of the wave hydrodynamics and induced ocean circulation. It limits our understanding of coral reef systems and the predictive capabilities of these models. The work presented in this study and the development efforts behind this new code are specifically designed to address this issue. Our model could be use to better constrain sediment transport in reef-lagoonal systems and the geographical distribution of reef organisms over several hundreds to thousands of years. We first describe the physical methods, coupling strategies and main assumptions underlying our approach then we propose a series of simulations in which we explore reef responses to different climatic forcings... (I will wait to get some results before going further)
+In this paper, we propose a parallel 3D numerical model based on a hybrid approach which combines conventional techniques to compute wave transformation, ocean circulation and calcareous sand transport with a fuzzy logic method to simulate carbonate production and disintegration. To our knowledge, previous carbonate stratigraphic forward models are all lacking the details of the wave hydrodynamics and induced ocean circulation. It limits our understanding of coral reef systems and the predictive capabilities of these models. The work presented in this study and the development efforts behind this new code are specifically designed to address this issue. Our model could be use to better constrain sediment transport in reef-lagoonal systems and geographical distribution of reef organisms over several hundreds to thousands of years. We first describe the physical methods, coupling strategies and main assumptions underlying our approach then we propose a series of simulations in which we explore reef responses to different climatic forcings... (I will wait to get some results before going further)
 
 \section{Physical description}
 
-In this section, a new, deterministic three-dimensional carbonate forward model, pyReef is presented, which simulates reef growth, reef transport and lagoon development based on the coupling between four components: a wave transformation model, a long-term circulation model, a calcareous sand transport model and a carbonate production/disintegration fuzzy logic model (Fig.~\ref{pyreef_sketch}).
+In this section, our new deterministic three-dimensional carbonate forward model, pyReef, is presented. It simulates reef growth, reef transport and lagoon development based on the coupling between four components: a wave transformation model, a long-term circulation model, a calcareous sand transport model and a carbonate production/disintegration fuzzy logic model (Fig.~\ref{pyreef_sketch}).
 
 \noindent \textbf{pyReef} is an open-source and parallel model mainly written in Python and capable of simulating reef system evolution over time scale of hundreds to thousands of years and over 1 to 10's kilometres scale. The model source code, its associated documentation along with the input files for the examples discussed in this paper are available on Github (http://github.com/pyReef-model). The code is designed to be applied within a variety of environments, from fringing and barrier reefs to carbonate ramps and atolls.
 
@@ -376,9 +376,16 @@ Alternative approaches such as fuzzy logic, which is by definition able to cope 
 \noindent Based on a fuzzy logic approach, carbonate system evolution in pyReef is driven entirely by a set of linguistic rules whose variables are fully adjustable. Therefore, the utility and effectiveness of the approach is mostly based on the user's understanding of the modelled carbonate system. The technique is specifically useful to understand how particular variable, in isolation or in combination with other factors, influences carbonate depositional geometries and reef adaptation (Fig. \ref{fuzzyfig}).
 
 In its current form, pyReef employs five types of control variables: depth, wave energy (derived from ocean bottom orbital velocity), sedimentation rate, ocean's temperature and acidity. For each of these variables, one can define a range of fuzzy sets using membership functions \citep{Nordlund99}. A membership function is a curve showing the degree of truth (\textit{i.e.} ranging between 0 and 1) of membership in a particular fuzzy set (Fig. \ref{fuzzyfig}). In pyReef, these curves can be simple triangles, trapezoids, bell-shaped curves, or have more complicated shapes as shown in Fig. \ref{fuzzyfig}. Production and/or disintegration of any specific coral assemblage is then computed from a series of fuzzy rules. A fuzzy rule is a logic \textit{if-then} rule defined from the fuzzy sets \citep{Demicco01}. In our model, the combination of the fuzzy sets in each fuzzy rule is restricted to the \textit{and} operator. The amalgamation of competing fuzzy rules is usually referred to as a fuzzy system. Summation of multiple rules from the fuzzy system by truncation of the membership functions produces a new fuzzy answer in the form of a new membership set (Fig. \ref{fuzzyfig}). The last step consists in computing a single number for this fuzzy set through \textit{defuzzification} \citep{Zadeh65}. In pyReef, the centroid (center of gravity) for the area below the membership set is taken as the \textit{defuzzified} output value.
-\\
-\\
-Coupling of the wave transformation approach (SWAN) with the long-term circulation and sediment transport models and with the fuzzy logic technique presented above allow for numerical analysis of carbonate platforms evolution, stratigraphic architecture reconstruction and provides a numerical framework to quantitatively assess reef system responses to climatic forcing over millennial scales.
+
+\begin{figure}[t]
+\centering
+\noindent\includegraphics[width=20pc]{figs/fig4.pdf}
+\caption{pyReef model architecture showing the relationship between the main components.
+}
+\label{pyreef_archi}
+\end{figure}
+
+Coupling of the wave transformation approach (SWAN) with the long-term circulation and sediment transport models and with the fuzzy logic technique summarized in figure \ref{pyreef_archi} allows for numerical analysis of carbonate platforms evolution, stratigraphic architecture reconstruction and provides a numerical framework to quantitatively assess reef system responses to climatic forcing over millennial scales.
 
 \section{Models setup}
 
@@ -737,6 +744,9 @@ Warner, J. C., C. R. Sherwood, R. P. Signell, C. Harris, and H. G. Arango (2008)
 
 \bibitem[{\textit{Williams et al.}(2011)}]{Williams11}
 Williams, H. D., P. M. Burgess, V. P. Wright, G. Della Porta, and D. Granjeon (2011), Investigating carbonate platform types: Multiple controls and a continuum of geometries, \textit{J. Sed. Res.}, \textit{81}, 18--37.
+
+\bibitem[{\textit{Wolfram}(1984)}]{Wolfram84}
+Wolfram, S. (1984), Cellular Automata as Models of Complexity, Nature, \textit{311}, 419--424.
 
 \bibitem[{\textit{Young}(1989)}]{Young89}
 Young, I. R. (1989), Wave transformation over coral reefs, \textit{J. Geophys. Res.}, \textit{94(C7)}, 9779--9789, doi:10.1029/JC094iC07p09779.
